// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha-control"
  >
    <div
      class="rc-alpha-control__checkboard"
    >
      <div
        class="rc-checkboard"
        style="background: url("null");"
      />
    </div>
    <div
      class="rc-alpha-control__gradient"
      style="background: linear-gradient(to right, rgba(255, 0, 0, 0) 0%, rgb(255, 0, 0) 100%);"
    />
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="rc-alpha-control__container"
      role="slider"
      tabindex="0"
    >
      <div
        class="rc-alpha-control__pointer"
        style="left: 100%;"
      >
        <div
          class="rc-alpha-control__slider"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkboard renders children correctly 1`] = `
<DocumentFragment>
  <button
    class="rc-checkboard"
    style="background: url("null");"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Checkboard renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-checkboard"
    style="background: url("null");"
  />
</DocumentFragment>
`;

exports[`EditableInput renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-editable-input"
  >
    <input
      class="rc-editable-input__input"
      id="rc-editable-input-1"
      placeholder="#fff"
      spellcheck="false"
      value="UNDEFINED"
    />
    <label
      class="rc-editable-input__label"
      for="rc-editable-input-1"
    >
      Hex
    </label>
  </div>
</DocumentFragment>
`;

exports[`Hue renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-hue-control"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="359"
      aria-valuemin="0"
      aria-valuenow="0"
      class="rc-hue-control__container"
      role="slider"
      style="background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
      tabindex="0"
    >
      <div
        class="rc-hue-control__pointer"
        style="left: 0%;"
      >
        <div
          class="rc-hue-control__slider"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Saturation renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Color saturation and brightness"
    class="rc-saturation"
    style="background: rgb(255, 0, 0);"
    tabindex="0"
  >
    <div
      class="rc-saturation__white"
      style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
    >
      <div
        class="rc-saturation__black"
        style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
      />
      <div
        class="rc-saturation__pointer"
        style="top: 0%; left: 100%;"
      >
        <div
          class="rc-saturation__circle"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Swatch renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      aria-label="#333"
      class="rc-swatch"
      role="button"
      style="background: rgb(51, 51, 51); opacity: 0.4;"
      tabindex="0"
      title="#333"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders custom title correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      aria-label="white"
      class="rc-swatch"
      role="button"
      style="background: rgb(255, 255, 255);"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders with an onMouseOver handler correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      aria-label="white"
      class="rc-swatch"
      role="button"
      style="background: rgb(255, 255, 255);"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;
